--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prettyearthwebscraper",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -12,10 +12,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^12.12.27",
-    "eslint": "^6.8.0"
+    "@types/node": "^17.0.21",
+    "@types/request": "^2.48.8",
+    "eslint": "^8.11.0"
   },
   "dependencies": {
-    "@types/request": "^2.48.4"
+    "request": "^2.88.2"
   }
 }
