--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -3,6 +3,7 @@ name: Scrape CI
 on:
   schedule:
     - cron: "0 0 15 * *" # Run every month
+  workflow_dispatch:
 
 jobs:
   build:
@@ -11,7 +12,6 @@ jobs:
     strategy:
       matrix:
         node-version: [16.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: actions/checkout@v2
@@ -20,12 +20,12 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-      run: npm ci
-      run: npm run build --if-present
+    - run: npm ci
+    - run: npm run build --if-present
     - name: Scrape
-      run: npm run start
+    - run: npm run start
     - name: Push new output to Github
-      run: |
+    - run: |
           git config --global user.name "evertdespiegeleer"
           git config --global user.email "evert.de.spiegeleer@gmail.com"
 
