--- a/.github/workflows/scrape2.yml
+++ b/.github/workflows/scrape2.yml
@@ -20,11 +20,10 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-      run: npm ci
-      run: npm run build --if-present
-      name: Scrape
-      run: npm run start
-      run: |
+    - run: npm ci
+    - run: npm run build --if-present
+    - run: npm run start
+    - run: |
           git config --global user.name "evertdespiegeleer"
           git config --global user.email "evert.de.spiegeleer@gmail.com"
           git add ./output/prettyOutput.json
